--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
+        <header>
+            <h1> This is my Pokedex </h1>
+        </header>
+        <main>
+        <ul class="pokemon-list"></ul>
+        </main>
         <script src="js/scripts.js"></script> 
     </body>
 </html>
