--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <main>
         <ul class="pokemon-list"></ul>
         </main>
-        <script src="js/scripts.js"></script> 
+        <strong>
+            <script src="js/promise-polyfill.js"></script>
+            <script src="js/fetch-polyfill.js"></script>
+            <script src="js/scripts.js"></script>     
+        </strong>
+        
     </body>
 </html>
