--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1> This is my Pokedex </h1>
+            <h1> Pokedex </h1>
         </header>
         <main>
         <ul class="pokemon-list"></ul>
