Add classes to use for Modal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
         </header>
         <main>
         <ul class="pokemon-list"></ul>
+
+        <!-- Modal -->
+        <div class="modal fade" id="modal-container">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="modal-title"></h5>
+                    </div>
+                    <div class="modal-body">
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="close" >Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         </main>
         <strong>
             <script src="js/promise-polyfill.js"></script>
