--- a/index.html
+++ b/index.html
@@ -8,24 +8,16 @@
     </head>
     <body>
         <header>
-            <h1> Pokedex </h1>
+            <h1>Pokedex</h1>
         </header>
         <main>
         <ul class="pokemon-list"></ul>
 
-        <!-- Modal -->
-        <div class="modal fade" id="modal-container">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                    <h5 class="modal-title" id="modal-title"></h5>
-                    </div>
-                    <div class="modal-body">
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="close" >Close</button>
-                    </div>
-                </div>
+        <div id="modal-container">
+            <div class="modal">
+              <button class="modal-close">Close</button>
+              <h1>Modal title</h1>
+              <p>Modal text</p>       
             </div>
         </div>
 
