Feat: add nav bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         </header>
         <main>
         <ul class="pokemon-list"></ul>
+  <body>
+    <!--NavBar-->
+    <nav class="navbar navbar-expand-lg custom-navbar">
+      <a class="navbar-brand mx-auto" href="#">
+        <img src="img/pokemon.logo.svg" alt="pokemon logo" />
+      </a>
+    </nav>
 
         <div id="modal-container">
             <div class="modal">
