--- a/index.html
+++ b/index.html
@@ -20,13 +20,52 @@
       </a>
     </nav>
 
-        <div id="modal-container">
-            <div class="modal">
-              <button class="modal-close">Close</button>
-              <h1>Modal title</h1>
-              <p>Modal text</p>       
+    <div class="list-group">
+      <header class="container">
+        <ul class="pokemon-list list-group"></ul>
+      </header>
+    </div>
+
+    <main class="container">
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+            <div class="modal-body">...</div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
         </div>
+      </div>
+    </main>
+
+    <footer class="container"></footer>
+
     <strong>
       <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
