--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       <script src="js/promise-polyfill.js"></script>
       <script src="js/fetch-polyfill.js"></script>
       <script src="js/scripts.js"></script>
+      <script src="js/tota11y.min.js"></script>
     </strong>
   </body>
 </html>
