--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
-    <!--NavBar-->
-    <nav class="navbar navbar-expand-lg custom-navbar">
-      <a class="navbar-brand mx-auto" href="#">
-        <img src="img/pokemon.logo.svg" alt="pokemon logo" />
-      </a>
-    </nav>
-
     <header class="container">
-      <ul class="pokemon-list list-group"></ul>
-    </header>
+      <!--NavBar-->
+      <nav class="navbar navbar-light">
+        <a class="navbar-brand" href="#">
+          <img src="img/pokemon.logo.svg" class="img-fluid" alt="Responsive image" />
+        </a>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </nav>
+    </header> 
 
     <main class="container">
+      <ul class="pokemon-list list-group"></ul>
       <!-- Modal -->
       <div
         class="modal fade"
