--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </a>
         <form class="form-inline">
           <input
-            class="form-control mr-sm-2"
+            class="searchBar form-control mr-sm-2"
             type="search"
             placeholder="Search"
             aria-label="Search"
